New features xfreerdp - gateway and admin console

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -38,3 +38,4 @@
 1.3.11 - Добавлена воз-сть сохранения и изменения подключения к Citrix
 1.3.12 - Реализовано RDP-подключение через xfreerdp
 1.3.13 - Вывод имени пользователя в окнах zenity (xfreerdp)
+1.3.14 - Добавлены новые возможности xfreerdp - шлюз и консоль
