--- a/CHANGELOG
+++ b/CHANGELOG
@@ -40,3 +40,4 @@
 1.3.13 - Вывод имени пользователя в окнах zenity (xfreerdp)
 1.3.14 - Добавлены новые возможности xfreerdp - шлюз и консоль
        - Мелкие изменения в интерфейс
+1.3.15 - Добавлена возможность копирования подключения
