--- a/CHANGELOG
+++ b/CHANGELOG
@@ -41,3 +41,4 @@
 1.3.14 - Добавлены новые возможности xfreerdp - шлюз и консоль
        - Мелкие изменения в интерфейс
 1.3.15 - Добавлена возможность копирования подключения
+1.3.16 - Добавлена возможность открытия ссылки в Веб-браузере
