--- a/CHANGELOG
+++ b/CHANGELOG
@@ -42,5 +42,6 @@
        - Мелкие изменения в интерфейс
 1.3.15 - Добавлена возможность копирования подключения
 1.3.16 - Добавлена возможность открытия ссылки в Веб-браузере
-1.3.17 - Добавлена галка Смарт-карты для RDP через FreeRDP
+1.3.17 - Добавлен проброс смарткарт для RDP через FreeRDP
        - В FreeRDP введено использование ключа -sec-nla для ввода логина/пароля после подключения (вместо zenity)
+1.3.18 - Добавлены удаленный звук, проброс принтеров, использование микрофона и нескльких мониторов для RDP через FreeRDP
