--- a/CHANGELOG
+++ b/CHANGELOG
@@ -45,3 +45,4 @@
 1.3.17 - Добавлен проброс смарткарт для RDP через FreeRDP
        - В FreeRDP введено использование ключа -sec-nla для ввода логина/пароля после подключения (вместо zenity)
 1.3.18 - Добавлены удаленный звук, проброс принтеров, использование микрофона и нескльких мониторов для RDP через FreeRDP
+1.3.19 - Добавлена возможность быстрого подключения по SSH и SFTP в формате "имя@сервер"
