Добавлены параметры производительности для FreeRDP

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -46,3 +46,4 @@
        - В FreeRDP введено использование ключа -sec-nla для ввода логина/пароля после подключения (вместо zenity)
 1.3.18 - Добавлены удаленный звук, проброс принтеров, использование микрофона и нескльких мониторов для RDP через FreeRDP
 1.3.19 - Добавлена возможность быстрого подключения по SSH и SFTP в формате "имя@сервер"
+1.3.20 - Добавлены параметры производительности для FreeRDP
