--- a/CHANGELOG
+++ b/CHANGELOG
@@ -47,3 +47,5 @@
 1.3.18 - Добавлены удаленный звук, проброс принтеров, использование микрофона и нескльких мониторов для RDP через FreeRDP
 1.3.19 - Добавлена возможность быстрого подключения по SSH и SFTP в формате "имя@сервер"
 1.3.20 - Добавлены параметры производительности для FreeRDP
+1.3.21 - Добавлена возможность выбора вкладки быстрого подключения по умолчанию
+       - имя ярлыка теперь такое же как и у самого сохраненного подключения
