--- a/CHANGELOG
+++ b/CHANGELOG
@@ -49,3 +49,7 @@
 1.3.20 - Добавлены параметры производительности для FreeRDP
 1.3.21 - Добавлена возможность выбора вкладки быстрого подключения по умолчанию
        - имя ярлыка теперь такое же как и у самого сохраненного подключения
+1.3.22 - Новые возможности при подключении по FreeRDP:
+	- перенаправление USB-накопителей
+        - выбор отображения во всю рабочую область экрана (ключ /workarea)
+        - ручное отключение/включение проверки подлинности на уровне сети (NLA) вручную (ключ -sec-nla теперь опциональный)
