Fixed a bug - sometimes doesn't work quick

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -50,6 +50,7 @@
 1.3.21 - Добавлена возможность выбора вкладки быстрого подключения по умолчанию
        - имя ярлыка теперь такое же как и у самого сохраненного подключения
 1.3.22 - Новые возможности при подключении по FreeRDP:
-	    - перенаправление USB-накопителей
+	      - перенаправление USB-накопителей
         - выбор отображения во всю рабочую область экрана (ключ /workarea)
         - ручное отключение/включение проверки подлинности на уровне сети (NLA) вручную (ключ -sec-nla теперь опциональный)
+1.3.23 - Исправлен баг с быстрым подключением из главного окна, могло не срабатывать
