--- a/CHANGELOG
+++ b/CHANGELOG
@@ -54,3 +54,13 @@
         - выбор отображения во всю рабочую область экрана (ключ /workarea)
         - ручное отключение/включение проверки подлинности на уровне сети (NLA) вручную (ключ -sec-nla теперь опциональный)
 1.3.23 - Исправлен баг с быстрым подключением из главного окна, могло не срабатывать
+
+1.4.0 - Добавлено ведение логов
+      - FreeRDP: Добавлен ключ /span
+      - VNC-клиент по умолчанию TigerVNC/RealVNC
+      - Быстрое подключение теперь по имени сохраненного соединения, а не имени файла *.ctor
+      - AltLinux:
+       - Добавлен 'man connector'
+       - Добавлена проверка установки VMware View Client и Citrix Reciever
+       - FreeRDP: Реализована проверка папки расположения подключенных носителей, control udisks2
+1.4.1 - FreeRDP: добавлена возможность проброса дополнительных папок - Рабочий стол, Документы и Загрузки
